--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@ng-bootstrap/ng-bootstrap": "^4.0.1",
     "@types/jquery": "^3.3.29",
     "core-js": "^2.5.4",
+    "ng-http-loader": "^5.0.1",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
